# sprite-animation-example

./: .gitignore  meson.build  readme.md
Shader/: fragmentShader.glsl  vertexShader.glsl
include/: Shader.h  Sprite.h  helpers.h
src/: Shader.cpp  Sprite.cpp  main.cpp
