project('sae','cpp')
srcAssembler=run_command('srcAssembler.sh')
sources=srcAssembler.stdout().strip().split('\n')
inc_dir=include_directories('include')
sfmlWindow=dependency('sfml-window')
glew=dependency('glew')
sfmlGraphics=dependency('sfml-graphics')
sfmlSys=dependency('sfml-system')
executable('sae',sources,include_directories:[inc_dir],dependencies:[sfmlWindow,glew,sfmlGraphics,sfmlSys])
